ingress/ingress-svc.yaml
apiVersion: v1

kind: Service

metadata:
  name: nginx

spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
      protocol: TCP

  selector:
    app: nginx
